src/test/ui/dollar-crate/dollar-crate-is-keyword.stderr
error: expected identifier, found reserved identifier `$crate`
  --> $DIR/dollar-crate-is-keyword.rs:6:20
   |
LL |             struct $crate {}
   |                    ^^^^^^ expected identifier, found reserved identifier
...
LL | m!();
   | ----- in this macro invocation

error: expected identifier, found reserved identifier `$crate`
  --> $DIR/dollar-crate-is-keyword.rs:11:23
   |
LL |         use $crate as $crate;
   |                       ^^^^^^ expected identifier, found reserved identifier
...
LL | m!();
   | ----- in this macro invocation

warning: `$crate` may not be imported
  --> $DIR/dollar-crate-is-keyword.rs:9:9
   |
LL |         use $crate; // OK
   |         ^^^^^^^^^^^
...
LL | m!();
   | ----- in this macro invocation
   |
   = note: `use $crate;` was erroneously allowed and will become a hard error in a future release

warning: `$crate` may not be imported
  --> $DIR/dollar-crate-is-keyword.rs:11:9
   |
LL |         use $crate as $crate;
   |         ^^^^^^^^^^^^^^^^^^^^^
...
LL | m!();
   | ----- in this macro invocation
   |
   = note: `use $crate;` was erroneously allowed and will become a hard error in a future release

error: aborting due to 2 previous errors

